--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p class="preco-atual">$149.99</p>
         <p class="preco-real">$169.99</p>
         <button class="butao">
-          <img class="icone-carro" src="images/icon-cart.svg" alt=""> 
+          <img class="icone-carro" src="images/icon-cart.svg" alt="icone de compra"> 
           Add to Cart
         </button>
       </section>
