--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 </head>
 <body>
     <section class="container">
-      <section class="foto-produto"></section>
+      <img src="images/image-product-desktop.jpg" alt="" class="desktop">
+      <img src="images/image-product-mobile.jpg" alt="" class="mobile">
       <section class="descricao">
         <p class="descricao-previa">PERFUME</p>
         <h1 class="descricao-titulo">Gabrielle Essence Eau De Parfum</h1>
